Name change updates

--- a/www/wp-content/themes/galerio/style.scss
+++ b/www/wp-content/themes/galerio/style.scss
@@ -1,6 +1,6 @@
 /*!
-Theme Name: Art CMS Child Theme
-Theme URI: http://lab.adasha.com/add-ons/wp-art-cms
+Theme Name: Galerio Theme
+Theme URI: http://lab.adasha.com/add-ons/galerio
 Author: adasha.com
 Author URI: http://www.adasha.com/
 Description: Art Gallery theme extension
@@ -8,7 +8,7 @@ Version: 0.2-alpha
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Template: eclecticon
-Text Domain: art-child
+Text Domain: galerio
 */
 
 
