--- a/site/wp-content/themes/galerio/templates/single-galerio_profile.html
+++ b/site/wp-content/themes/galerio/templates/single-galerio_profile.html
@@ -19,26 +19,18 @@
 
 <!-- wp:columns -->
 <div class="wp-block-columns"><!-- wp:column {"width":"66.66%","style":{"spacing":{"blockGap":"var:preset|spacing|30"}}} -->
-<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:pods/pods-block-single {"template":{"label":"profile-birth-to-death","value":"profile-birth-to-death"}} /-->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
+<article class="wp-block-group"><!-- wp:heading {"level":4} -->
+<h4 class="wp-block-heading">[pods template="profile-nationality-birth-death"]</h4>
+<!-- /wp:heading -->
 
-<!-- wp:spacer {"height":"1em"} -->
-<div style="height:1em" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
-
-<!-- wp:pods/pods-block-field {"field":"profile_bio"} /--></div>
+<!-- wp:pods/pods-block-field {"field":"profile_bio"} /--></article>
+<!-- /wp:group --></div>
 <!-- /wp:column -->
 
 <!-- wp:column {"width":"33.33%","layout":{"type":"default"}} -->
-<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20","left":"var:preset|spacing|20","right":"var:preset|spacing|20"},"margin":{"top":"0","bottom":"var:preset|spacing|30"}}},"backgroundColor":"custom-highlight","layout":{"type":"default"}} -->
-<div class="wp-block-group has-custom-highlight-background-color has-background" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--30);padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:paragraph -->
-<p>[pods field="accolades"]</p>
-<!-- /wp:paragraph --></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20","left":"var:preset|spacing|20","right":"var:preset|spacing|20"},"margin":{"top":"0","bottom":"var:preset|spacing|20"}}},"backgroundColor":"custom-highlight","layout":{"type":"default"}} -->
-<div class="wp-block-group has-custom-highlight-background-color has-background" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--20);padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:paragraph -->
-<p></p>
-<!-- /wp:paragraph --></div>
+<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:group {"metadata":{"name":"Asides"},"className":"is-style-asides","layout":{"type":"default"}} -->
+<div class="wp-block-group is-style-asides"><!-- wp:pods/pods-block-single {"template":{"label":"profile-asides","value":"profile-asides"}} /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
